ODP-6828: Fix complication due to curator.version (#75) (#83)
* ODP-6828: Fix complication due to curator.version (#75)

* ODP-6828: Fix complication due to curator.version

* ODP-6828: Fix complication due to JDK 8 related issues

* remove duplicate "properties"